objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email id of someone who is taking care of that market</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enterprise_Assignment_Override__c</fullName>
        <label>Enterprise_Assignment_Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portfolio</fullName>
                    <default>true</default>
                    <label>Portfolio</label>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mid_Market_Assignment_Override__c</fullName>
        <label>Mid Market Assignment Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portfolio</fullName>
                    <default>true</default>
                    <label>Portfolio</label>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Longer_in_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Porfolio no longer exists
&gt;&gt;&gt;check box when "deactivated"</inlineHelpText>
        <label>No Longer in Use?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Buildings__c</fullName>
        <description>populated by a declarative rollup summary</description>
        <inlineHelpText>Number of buildings related to this portfolio</inlineHelpText>
        <label>Number of Buildings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone of someone who is taking care of that market</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Senior Sales Exec of Portfolio</inlineHelpText>
        <label>Portfolio Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <description>Display name for portfolio, something user friendly to end users</description>
        <inlineHelpText>Display name (text)</inlineHelpText>
        <label>Portfolio Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TerritoryID__r.RegionID__r.Region__c</formula>
        <inlineHelpText>Display name (text)</inlineHelpText>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Portfolios</relationshipLabel>
        <relationshipName>Portfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>TerritoryID__r.Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display name (text)</inlineHelpText>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>We are introducing new object Market so that same building can fall under multiple Markets as per Marketing department requirement.</description>
    <label>Portfolio</label>
    <nameField>
        <label>Portfolio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Portfolio_Sales_Manager__c</columns>
        <columns>Number_of_Buildings__c</columns>
        <columns>TerritoryID__c</columns>
        <columns>Territory__c</columns>
        <columns>Region__c</columns>
        <columns>UUID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Portfolios</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Portfolio_Sales_Manager__c</columns>
        <columns>Number_of_Buildings__c</columns>
        <columns>TerritoryID__c</columns>
        <columns>Territory__c</columns>
        <columns>Region__c</columns>
        <columns>UUID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>No_Longer_in_Use__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Active Portfolios</label>
    </listViews>
</CustomObject>